corrected the colour contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -69,15 +69,16 @@ nav a {
     font-weight: bold;
     padding: 1rem;
     display: block;
+    font-size: 1.2rem;
 }
 
 nav li.active a {
-    color: #1abc9c;
+    color: white;
 }
 
 nav a:hover {
-    color: #1abc9c;
-    background-color: white;
+    color: white;
+    background-color: steelblue;
 }
 
 main {
@@ -96,7 +97,7 @@ main {
 }
 
 .parent section {
-    border: 1px solid #415541;
+    border: 1px solid steelblue;
     background-color: #e9f5e9;
     border-radius: 10px;
     overflow: hidden;
@@ -104,7 +105,7 @@ main {
 }
 
 .parent h2 {
-    background-color: #415541;
+    background-color: steelblue;
     color: #fff;
     display: block;
     text-align: center;
